add_subdirectory(1.Chain_of_Responsibility)
add_subdirectory(2.Command)
add_subdirectory(3.Iterator)
add_subdirectory(4.Mediator)
add_subdirectory(5.Memento)
add_subdirectory(6.Observer)
add_subdirectory(7.State)
add_subdirectory(8.Strategy)
add_subdirectory(9.Template_Method)
add_subdirectory(10.Visitor)